--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 rpws is an installed script that adds workspaces to ratpoison. Look at
 contrib/rpws for instructions on how to use it.
 
+** new commands addhook and remhook
+There are now hooks for various operations.
+
 * Changes since 1.2.0-beta5
 ** Completions
 You can now type Tab and get completions on window names, group names,
