*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,3 +26,4 @@ Nicklas Lindgren <nili@lysator.liu.se>
 Pasi Kallinen <pkalli@cs.joensuu.fi>
 Rupert <rupert.debian@hotpop.com>
 Tim Goodwin <tjg@star.le.ac.uk>
+Joshua Neuheisel <jneuheisel@msn.com>
