--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.3.0-beta2
+** contrib/allwindows.sh script
+A script that lists all groups and the windows in each group.
+
 * Changes since 1.2.2
 ** Workspace script
 rpws is an installed script that adds workspaces to ratpoison. Look at
