--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.3.0-beta2
+** new command gdelete
+Delete a group.
+
 ** contrib/allwindows.sh script
 A script that lists all groups and the windows in each group.
 
